Fixed spacing issues on teaser figures

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5388,7 +5388,7 @@ figure .caption,
 }
 .teasers .teaser a img {
   float: left;
-  margin: 0 10px 0 0;
+  margin: 0;
   padding: 4px;
   border: 1px solid #eee;
 }
@@ -5405,6 +5405,10 @@ figure .caption,
   margin: 0;
   width: 25%;
   border-bottom: 0;
+  margin-right: 20px;
+}
+.teaser-preview-figure img {
+  margin-right: 0 !important;
 }
 @media screen and (max-width: 700px) {
   .teasers .teaser a img {
