--- a/assets/css/less/nesi/modules.less
+++ b/assets/css/less/nesi/modules.less
@@ -40,7 +40,7 @@
 			}
 			img {
 				float: left;
-				margin: 0 10px 0 0;
+				margin: 0;
 				padding: 4px;
 				border: 1px solid #eee;
 			}
@@ -61,6 +61,10 @@
 	margin: 0;
 	width: 25%;
 	border-bottom: 0;
+	margin-right: 20px;
+	img{
+		margin-right: 0 !important;
+	}
 
 }
 @media screen and (max-width: 700px) {
